[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/Clear_Button.png" type="Texture" id=1]
[ext_resource path="res://art/Metals_block.png" type="Texture" id=2]
[ext_resource path="res://art/Counter.png" type="Texture" id=3]
[ext_resource path="res://art/pixel-wallpaper-3.jpg" type="Texture" id=4]
[ext_resource path="res://Scripts/SCounter.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SegregatePanel.gd" type="Script" id=6]
[ext_resource path="res://art/paper_block.png" type="Texture" id=7]
[ext_resource path="res://art/mask_block.png" type="Texture" id=8]
[ext_resource path="res://art/submit_cycle.png" type="Texture" id=9]
[ext_resource path="res://art/Glass_block.png" type="Texture" id=10]
[ext_resource path="res://art/plastic_block.png" type="Texture" id=11]
[ext_resource path="res://art/PPE_block.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Kenney Mini.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Fonts/TitilliumWeb-Light.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Fonts/TitilliumWeb-SemiBold.ttf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 70
extra_spacing_bottom = -11
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 15 )

[node name="SegregatePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
margin_right = 576.0
margin_bottom = 1024.0
rect_min_size = Vector2( 524, 980 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 524, 980 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 536.0
margin_bottom = 1024.0
rect_min_size = Vector2( 512, 1024 )
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 536.0
margin_bottom = 64.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCounter" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 536.0
margin_bottom = 64.0
rect_min_size = Vector2( 320, 64 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SCounter"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCounterLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SCounter/HBoxContainer"]
margin_top = 13.0
margin_right = 156.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total pts.:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/SCounter/HBoxContainer"]
margin_left = 160.0
margin_top = 13.0
margin_right = 179.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 536.0
margin_bottom = 846.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 536.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "What did you segregate today?"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 536.0
margin_bottom = 503.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 536.0
margin_bottom = 128.0
custom_constants/separation = 30
alignment = 1

[node name="MetalsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 174.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PaperButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 332.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="MasksButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 490.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 536.0
margin_bottom = 276.0
custom_constants/separation = 30
alignment = 1

[node name="GlassButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 46.0
margin_right = 174.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="PlasticButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 204.0
margin_right = 332.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="PPEButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 362.0
margin_right = 490.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 533.0
margin_right = 536.0
margin_bottom = 752.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 536.0
margin_bottom = 70.0
alignment = 1

[node name="STotalButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 128.0
margin_right = 408.0
margin_bottom = 70.0
rect_min_size = Vector2( 280, 70 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 536.0
margin_bottom = 160.0
alignment = 1

[node name="SClearButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 128.0
margin_right = 408.0
margin_bottom = 70.0
rect_min_size = Vector2( 280, 70 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Notification" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 180.0
margin_right = 536.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/MetalsButton" to="." method="_on_MetalsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/PaperButton" to="." method="_on_PaperButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/MasksButton" to="." method="_on_MasksButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/GlassButton" to="." method="_on_GlassButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PlasticButton" to="." method="_on_PlasticButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PPEButton" to="." method="_on_PPEButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer3/STotalButton" to="." method="_on_STotalButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer4/SClearButton" to="." method="_on_SClearButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
